<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.aplus.pillreminder.controller.fragment.AddPillFragment">

    <ImageView
        android:id="@+id/imgPill"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_pill" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name" />

            <AutoCompleteTextView
                android:id="@+id/actvName"
                style="@style/PillInfoEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description" />

            <EditText
                android:id="@+id/etDescribe"
                style="@style/PillInfoEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quantity" />

            <EditText
                android:id="@+id/etQuantity"
                style="@style/PillInfoEditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="tablet(s)" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dose" />

            <EditText
                android:id="@+id/etDose"
                style="@style/PillInfoEditText"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                style="@style/PillInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:text="tablet(s) per time" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_alarm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imgBtnAddTime"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/holo_red_light"
                    android:foreground="?attr/selectableItemBackground"
                    android:src="@drawable/ic_add"
                    android:tint="@android:color/white" />

                <com.baoyz.swipemenulistview.SwipeMenuListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="@drawable/border" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
